Fixed a spacing issue with the letters on the masthead

--- a/css/index.css
+++ b/css/index.css
@@ -27,9 +27,10 @@ section {
 .masthead h1 {
     font-size: 2.5rem;
     line-height: 2.5rem;
-    letter-spacing: 0.8rem;
+    letter-spacing: 0.3rem;
     background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.2));
     -webkit-text-fill-color: transparent;
+    background-clip: text;
     -webkit-background-clip: text;
 }
 
